Fixed the issue with the heart as well as the spacing between movie posters

--- a/styles/sass/_indiv.scss
+++ b/styles/sass/_indiv.scss
@@ -127,6 +127,11 @@
   }
 }
 
+.no-profile {
+  text-align: center;
+  padding-bottom: 10rem;
+}
+
 @media (min-width: $medium) {
   
 }
